--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,22 +23,31 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Users">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/User/Users">Users</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Player/Player">Players</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Team">Teams</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Team/Team">Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/TeamPerMatch">Team Per Match</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/MatchupTeam/MatchupTeam">Matchup Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Matchup">Matchup</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Matchup/Matchup">Matchup</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Tourney">Tourney</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/FavoriteMatchup/FavoriteMatchup">Favorit Matchup</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Tournament/Tournament">Tournament</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/TournamentType/TournamentType">Tournament Type</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/GameType/GameType">Game Type</a>
                         </li>
                     </ul>
                 </div>
