--- a/Pages/Player/Player.cshtml
+++ b/Pages/Player/Player.cshtml
@@ -23,8 +23,8 @@
                 <td>@player.firstName</td>
                 <td>@player.lastName</td>
                 <td>
-                    <a class="btn btn-primary btn-sm" href="/Player/Edit?id=@player.playerID">Edit</a>
-                    <a class="btn btn-danger btn-sm" href="/Player/Delete?id=@player.playerID">Delete</a>
+                    <a class="btn btn-primary btn-sm" href="/Player/EditPlayer?id=@player.playerID">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="/Player/DeletePlayer?id=@player.playerID">Delete</a>
                 </td>
             </tr>
         }
