--- a/Pages/Player/EditPlayer.cshtml
+++ b/Pages/Player/EditPlayer.cshtml
@@ -25,7 +25,7 @@
             </td>
             <td>
                 @* <a class="btn btn-primary btn-sm" href=@Model.EditPlayer()>Submit Changes</a> *@
-                <input type="button" id="btn" runat="server" onclick=@Model.submitChanges/>trdfygubhnijmkol
+                <input type="button" id="btn" runat="server" onclick=@Model.submitChanges/>
             </td>
         </tr>
     </tbody>
