--- a/Pages/Player/Player.cshtml
+++ b/Pages/Player/Player.cshtml
@@ -4,7 +4,7 @@
 }
 <br />
 <h2>List of Players</h2>
-<a class='btn btn-primary btn-sm' href='/Player/Create'>New Player</a>
+<a class='btn btn-primary btn-sm' href='/Player/CreatePlayer'>New Player</a>
 <table class="table">
     <thead>
         <tr>
