--- a/Pages/Team/Team.cshtml
+++ b/Pages/Team/Team.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <br />
-<h2>List of Players</h2>
+<h2>List of Teams</h2>
 <a class='btn btn-primary btn-sm' href='/Player/Create'>New Player</a>
 <table class="table">
     <thead>
