--- a/Pages/Player/EditPlayer.cshtml
+++ b/Pages/Player/EditPlayer.cshtml
@@ -4,30 +4,44 @@
 }
 <br />
 <h2>Edit Player</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>TeamID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                <input type="number" id="TeamID" name="TeamID" />
-            </td>
-            <td>
-                <input type="text" id="FirstName" name="FirstName" />
-            </td>
-            <td>
-                <input type="text" id="LastName" name="LastName" />
-            </td>
-            <td>
-                @* <a class="btn btn-primary btn-sm" href=@Model.EditPlayer()>Submit Changes</a> *@
-                <input type="button" id="btn" runat="server" onclick=@Model.submitChanges/>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<br />
+<div class="container border" style="padding:20px">
+    <form method="post">
+        <div class"text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerEdit.firstName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="PlayerEdit.firstName" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerEdit.firstName"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerEdit.lastName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="PlayerEdit.lastName" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerEdit.lastName"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerEdit.teamID"></label>
+            </div>
+            <div class="col-5">
+                <input type="number" asp-for="PlayerEdit.teamID" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerEdit.teamID"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <input type="submit" class="btn btn-primary" value="Save" />
+            </div>
+            <div class="col-5">
+            </div>
+        </div>
+    </form>
+</div>
 
