--- a/Pages/User/EditUser.cshtml
+++ b/Pages/User/EditUser.cshtml
@@ -2,3 +2,45 @@
 @model TourneyPlaner.Pages.User.EditModel
 @{
 }
+<br />
+<h2>Edit User</h2>
+<br />
+<div class="container border" style="padding:20px">
+    <form method="post">
+        <div class"text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerEdit.firstName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="PlayerEdit.firstName" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerEdit.firstName"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerEdit.lastName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="PlayerEdit.lastName" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerEdit.lastName"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerEdit.teamID"></label>
+            </div>
+            <div class="col-5">
+                <input type="number" asp-for="PlayerEdit.teamID" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerEdit.teamID"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <input type="submit" class="btn btn-primary" value="Save" />
+            </div>
+            <div class="col-5">
+            </div>
+        </div>
+    </form>
+</div>
