--- a/Pages/TournamentType/TournamentType.cshtml
+++ b/Pages/TournamentType/TournamentType.cshtml
@@ -4,7 +4,7 @@
 }
 <br />
 <h2>List of Tournament Types</h2>
-<a class='btn btn-primary btn-sm' href='/User/CreateTournament'>New Tournament Type</a>
+<a class='btn btn-primary btn-sm' href='/TournamentType/CreateTournamentType'>New Tournament Type</a>
 <table class="table">
     <thead>
         <tr>
