--- a/Pages/Player/CreatePlayer.cshtml
+++ b/Pages/Player/CreatePlayer.cshtml
@@ -4,28 +4,43 @@
 }
 <br />
 <h2>Create Player</h2>
-<table class="table">
-    <thead>
-        <tr>
-            <th>TeamID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                <input type="number" id="TeamID" name="TeamID" />
-            </td>
-            <td>
-                <input type="text" id="FirstName" name="FirstName" />
-            </td>
-            <td>
-                <input type="text" id="LastName" name="LastName" />
-            </td>
-            <td>
-                <a class="btn btn-primary btn-sm" href="">Submit Changes</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<br />
+<div class="container border" style="padding:20px">
+    <form method="post">
+        <div class"text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerCreate.firstName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="PlayerCreate.firstName" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerCreate.firstName"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerCreate.lastName"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="PlayerCreate.lastName" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerCreate.lastName"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="PlayerCreate.teamID"></label>
+            </div>
+            <div class="col-5">
+                <input type="number" asp-for="PlayerCreate.teamID" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="PlayerCreate.teamID"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <input type="submit" class="btn btn-primary" value="Save" />
+            </div>
+            <div class="col-5">
+            </div>
+        </div>
+    </form>
+</div>
