--- a/Pages/Team/EditTeam.cshtml
+++ b/Pages/Team/EditTeam.cshtml
@@ -2,3 +2,27 @@
 @model TourneyPlaner.Pages.Team.EditModel
 @{
 }
+<br />
+<h2>Edit Team</h2>
+<br />
+<div class="container border" style="padding:20px">
+    <form method="post">
+        <div class"text-danger" asp-validation-summary="ModelOnly"></div>
+        <div class="form-group row">
+            <div class="col-2">
+                <label asp-for="teamEdit.name"></label>
+            </div>
+            <div class="col-5">
+                <input type="text" asp-for="teamEdit.name" class="form-control" />
+            </div>
+            <span class="text-danger" asp-validation-for="teamEdit.name"></span>
+        </div>
+        <div class="form-group row">
+            <div class="col-2">
+                <input type="submit" class="btn btn-primary" value="Save" />
+            </div>
+            <div class="col-5">
+            </div>
+        </div>
+    </form>
+</div>
