--- a/Pages/Tournament/EditTournament.cshtml
+++ b/Pages/Tournament/EditTournament.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <br />
-<h2>Edit Player</h2>
+<h2>Edit Tournament</h2>
 <br />
 <div class="container border" style="padding:20px">
     <form method="post">
