--- a/Pages/FavoriteMatchup/FavoriteMatchup.cshtml
+++ b/Pages/FavoriteMatchup/FavoriteMatchup.cshtml
@@ -3,8 +3,8 @@
 @{
 }
 <br />
-<h2>List of FavoriteMatchups</h2>
-<a class='btn btn-primary btn-sm' href='/FavoriteMatchup/Create'>New FavoriteMatchup</a>
+<h2>List of Favorite Matchups</h2>
+<a class='btn btn-primary btn-sm' href='/FavoriteMatchup/CreateFavoriteMatchup'>New Favorite Matchup</a>
 <table class="table">
     <thead>
         <tr>
