--- a/Pages/GameType/GameType.cshtml
+++ b/Pages/GameType/GameType.cshtml
@@ -4,7 +4,7 @@
 }
 <br />
 <h2>List of Game Types</h2>
-<a class='btn btn-primary btn-sm' href='/GameType/Create'>New Game Type</a>
+<a class='btn btn-primary btn-sm' href='/GameType/CreateGameType'>New Game Type</a>
 <table class="table">
     <thead>
         <tr>
