--- a/Pages/MatchupTeam/MatchupTeam.cshtml
+++ b/Pages/MatchupTeam/MatchupTeam.cshtml
@@ -3,8 +3,8 @@
 @{
 }
 <br />
-<h2>List of MatchupTeams</h2>
-<a class='btn btn-primary btn-sm' href='/MatchupTeam/Create'>New MatchupTeam</a>
+<h2>List of Matchup Teams</h2>
+<a class='btn btn-primary btn-sm' href='/MatchupTeam/CreateMatchupTeam'>New Matchup Team</a>
 <table class="table">
     <thead>
         <tr>
