--- a/Pages/Matchup/Matchup.cshtml
+++ b/Pages/Matchup/Matchup.cshtml
@@ -4,7 +4,7 @@
 }
 <br />
 <h2>List of Matchups</h2>
-<a class='btn btn-primary btn-sm' href='/Matchup/Create'>New Matchup</a>
+<a class='btn btn-primary btn-sm' href='/Matchup/CreateMatchup'>New Matchup</a>
 <table class="table">
     <thead>
         <tr>
