--- a/Pages/Team/Team.cshtml
+++ b/Pages/Team/Team.cshtml
@@ -4,7 +4,7 @@
 }
 <br />
 <h2>List of Teams</h2>
-<a class='btn btn-primary btn-sm' href='/Team/CreateTeam'>New Player</a>
+<a class='btn btn-primary btn-sm' href='/Team/CreateTeam'>New Team</a>
 <table class="table">
     <thead>
         <tr>
