--- a/Pages/Player/Player.cshtml
+++ b/Pages/Player/Player.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Player.PlayerModel
 @{
 }
+<!--Page for handling players in database-->
 <br />
 <h2>List of Players</h2>
 <a class='btn btn-primary btn-sm' href='/Player/CreatePlayer'>New Player</a>
