--- a/Pages/Team/Team.cshtml
+++ b/Pages/Team/Team.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Team.TeamModel
 @{
 }
+<!--Page for handling teams in database-->
 <br />
 <h2>List of Teams</h2>
 <a class='btn btn-primary btn-sm' href='/Team/CreateTeam'>New Player</a>
