--- a/Pages/Tournament/CreateTournament.cshtml
+++ b/Pages/Tournament/CreateTournament.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Tournament.CreateTournamentModel
 @{
 }
+<!--Form for creating a tournament type-->
 <br />
 <h2>Create Tournament</h2>
 <br />
