--- a/Pages/Tournament/Tournament.cshtml
+++ b/Pages/Tournament/Tournament.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Tournament.TournamentModel
 @{
 }
+<!--Page for handling tournaments in database-->
 <br />
     <h2>List of Tournaments</h2>
     <a class='btn btn-primary btn-sm' href='/Tournament/CreateTournament'>New Tournament</a>
