--- a/Pages/TournamentType/CreateTournamentType.cshtml
+++ b/Pages/TournamentType/CreateTournamentType.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.TournamentType.CreateTournamentTypeModel
 @{
 }
+<!--Form for creating a tournament type-->
 <br />
 <h2>Create Tournament Type</h2>
 <br />
