--- a/Pages/TournamentType/EditTournamentType.cshtml
+++ b/Pages/TournamentType/EditTournamentType.cshtml
@@ -2,6 +2,8 @@
 @model TourneyPlaner.Pages.TournamentType.EditModel
 @{
 }
+
+<!--Form for editing tournament type-->
 <br />
 <h2>Edit Tournament Type</h2>
 <br />
