--- a/Pages/TournamentType/TournamentType.cshtml
+++ b/Pages/TournamentType/TournamentType.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.TournamentType.TournamentTypeModel
 @{
 }
+<!--Page for handling tournament types in database-->
 <br />
 <h2>List of Tournament Types</h2>
 <a class='btn btn-primary btn-sm' href='/TournamentType/CreateTournamentType'>New Tournament Type</a>
