--- a/Pages/User/User.cshtml
+++ b/Pages/User/User.cshtml
@@ -2,6 +2,8 @@
 @model TourneyPlaner.Pages.UsersModel
 @{
 }
+
+<!--Displays a list of users with the capability to add, edit and delete users-->
 <br />
 <h2>List of Users</h2>
 <a class='btn btn-primary btn-sm' href='/User/CreateUser'>New User</a>
