--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,6 +4,7 @@
     Layout = "_LayoutLogin";
 }
 
+<!--User login form displayed upon visiting site-->
 <div class="container border" style="padding:20px">
     <form method="post">
         <div class"text-danger" asp-validation-summary="ModelOnly"></div>
