--- a/Pages/Tournament/EditTournament.cshtml
+++ b/Pages/Tournament/EditTournament.cshtml
@@ -2,6 +2,8 @@
 @model TourneyPlaner.Pages.Tournament.EditModel
 @{
 }
+
+<!--Form for editing tournament-->
 <br />
 <h2>Edit Tournament</h2>
 <br />
