--- a/Pages/FavoriteMatchup/CreateFavoriteMatchup.cshtml
+++ b/Pages/FavoriteMatchup/CreateFavoriteMatchup.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.FavoriteMatchup.CreateFavoriteMatchupModel
 @{
 }
+<!--Form for creating a favorite matchup-->
 <br />
 <h2>Create Favorite Matchup</h2>
 <br />
