--- a/Pages/FavoriteMatchup/EditFavoriteMatchup.cshtml
+++ b/Pages/FavoriteMatchup/EditFavoriteMatchup.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.FavoriteMatchup.EditModel
 @{
 }
+<!--Form for editing favorite matchups-->
 <br />
 <h2>Edit Favorite Matchup</h2>
 <br />
