--- a/Pages/FavoriteMatchup/FavoriteMatchup.cshtml
+++ b/Pages/FavoriteMatchup/FavoriteMatchup.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.FavoriteMatchup.FavoriteMatchupModel
 @{
 }
+<!--Page for handling favorite matchups in database-->
 <br />
 <h2>List of Favorite Matchups</h2>
 <a class='btn btn-primary btn-sm' href='/FavoriteMatchup/CreateFavoriteMatchup'>New Favorite Matchup</a>
