--- a/Pages/GameType/CreateGameType.cshtml
+++ b/Pages/GameType/CreateGameType.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.GameType.CreateGameTypeModel
 @{
 }
+<!--Form for creating a game type-->
 <br />
 <h2>Create Game Type</h2>
 <br />
