--- a/Pages/GameType/GameType.cshtml
+++ b/Pages/GameType/GameType.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.GameType.GameTypeModel
 @{
 }
+<!--Page for handling game types in database-->
 <br />
 <h2>List of Game Types</h2>
 <a class='btn btn-primary btn-sm' href='/GameType/CreateGameType'>New Game Type</a>
