--- a/Pages/Matchup/CreateMatchup.cshtml
+++ b/Pages/Matchup/CreateMatchup.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Matchup.CreateMatchupModel
 @{
 }
+<!--Form for creating a matchup-->
 <br />
 <h2>Create Matchup</h2>
 <br />
