--- a/Pages/MatchupTeam/CreateMatchupTeam.cshtml
+++ b/Pages/MatchupTeam/CreateMatchupTeam.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.MatchupTeam.CreateMatchupTeamModel
 @{
 }
+<!--Form for creating a matchup team-->
 <br />
 <h2>Create Matchup Team</h2>
 <br />
