--- a/Pages/MatchupTeam/EditMatchupTeam.cshtml
+++ b/Pages/MatchupTeam/EditMatchupTeam.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.MatchupTeam.EditModel
 @{
 }
+<!--Form for editing matchup teams-->
 <br />
 <h2>Edit Matchup Team</h2>
 <br />
