--- a/Pages/MatchupTeam/MatchupTeam.cshtml
+++ b/Pages/MatchupTeam/MatchupTeam.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.MatchupTeam.MatchupTeamModel
 @{
 }
+<!--Page for handling matchup teams in database-->
 <br />
 <h2>List of Matchup Teams</h2>
 <a class='btn btn-primary btn-sm' href='/MatchupTeam/CreateMatchupTeam'>New Matchup Team</a>
