--- a/Pages/Player/CreatePlayer.cshtml
+++ b/Pages/Player/CreatePlayer.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Player.CreatePlayerModel
 @{
 }
+<!--Form for creating a player-->
 <br />
 <h2>Create Player</h2>
 <br />
