--- a/Pages/Matchup/Matchup.cshtml
+++ b/Pages/Matchup/Matchup.cshtml
@@ -2,6 +2,7 @@
 @model TourneyPlaner.Pages.Matchup.MatchupModel
 @{
 }
+<!--Form for creating a matchup-->
 <br />
 <h2>List of Matchups</h2>
 <a class='btn btn-primary btn-sm' href='/Matchup/CreateMatchup'>New Matchup</a>
