--- a/Pages/FavoriteMatchup/FavoriteMatchup.cshtml
+++ b/Pages/FavoriteMatchup/FavoriteMatchup.cshtml
@@ -15,6 +15,7 @@
         </tr>
     </thead>
     <tbody>
+        <!--Retrieves all the favorite matchup objects from list-->
         @foreach (var favoriteMatchup in Model.favoriteMatchupList)
         {
             <tr>
