--- a/Pages/GameType/GameType.cshtml
+++ b/Pages/GameType/GameType.cshtml
@@ -17,6 +17,7 @@
         </tr>
     </thead>
     <tbody>
+        <!--Retrieves all the game type objects from list-->
         @foreach (var gameType in Model.gameTypeList)
         {
             <tr>
