--- a/Pages/Matchup/Matchup.cshtml
+++ b/Pages/Matchup/Matchup.cshtml
@@ -17,6 +17,7 @@
         </tr>   
     </thead>
     <tbody>
+        <!--Retrieves all the matchup objects from list-->
         @foreach (var matchup in Model.matchupList)
         {
             <tr>
