--- a/Pages/MatchupTeam/MatchupTeam.cshtml
+++ b/Pages/MatchupTeam/MatchupTeam.cshtml
@@ -16,6 +16,7 @@
         </tr>   
     </thead>
     <tbody>
+        <!--Retrieves all the matchup team objects from list-->
         @foreach (var matchupTeam in Model.matchupTeamList)
         {
                 <tr>
