--- a/Pages/Player/Player.cshtml
+++ b/Pages/Player/Player.cshtml
@@ -16,6 +16,7 @@
         </tr>
     </thead>
     <tbody>
+        <!--Retrieves all the player objects from list-->
         @foreach (var player in Model.listPlayer)
         {
             <tr>
