--- a/Pages/User/User.cshtml
+++ b/Pages/User/User.cshtml
@@ -17,6 +17,7 @@
         </tr>
     </thead>
     <tbody>
+        <!--Retrieves all the user objects from list-->
         @foreach (var user in Model.listUsers)
         {
             <tr>
