--- a/Pages/Team/Team.cshtml
+++ b/Pages/Team/Team.cshtml
@@ -14,6 +14,7 @@
         </tr>
     </thead>
     <tbody>
+        <!--Retrieves all the team objects from list-->
         @foreach (var team in Model.teamList)
         {
             <tr>
