--- a/Pages/TournamentType/TournamentType.cshtml
+++ b/Pages/TournamentType/TournamentType.cshtml
@@ -14,6 +14,7 @@
         </tr>
     </thead>
     <tbody>
+        <!--Retrieves all the tournament type objects from list-->
         @foreach (var tournament in Model.listTournamentType)
         {
             <tr>
